<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">COS Settings</string>
    <string name="application_settings_title_head">Misc</string>
    <string name="application_settings_title_subhead">Misc settings</string>
    <string name="application_settings_summary_head">Application moving, permissions, communication filtering, changelog</string>
    <string name="display_settings_title_head">Display</string>
    <string name="display_settings_title_subhead">Display settings</string>
    <string name="display_settings_summary_head">Display animations, rotation, timeouts</string>
    <string name="input_settings_title_head">Input</string>
    <string name="input_settings_title_subhead">Input settings</string>
    <string name="input_settings_summary_head">Input behavior, buttons, haptic feedback</string>
    <string name="interface_settings_title_head">Interface</string>
    <string name="interface_settings_title_subhead">Interface settings</string>
    <string name="interface_settings_summary_head">Interface tweaks, overscrolling, render effect</string>
    <string name="lockscreen_settings_title_head">Lockscreen</string>
    <string name="lockscreen_settings_title_subhead">Lockscreen settings</string>
    <string name="lockscreen_settings_summary_head">Lockscreen gestures, style, unlock options</string>
    <string name="performance_settings_title_head">Performance</string>
    <string name="performance_settings_title_subhead">Performance settings</string>
    <string name="performance_settings_summary_head">Performance tweaks, JIT, VM heap size</string>
    <string name="sound_settings_title_head">Sound</string>
    <string name="sound_settings_title_subhead">Sound settings</string>
    <string name="sound_settings_summary_head">Sound volumes, audio focus, quiet hours</string>
    <string name="system_settings_title_head">System</string>
    <string name="system_settings_title_subhead">System settings</string>
    <string name="system_settings_summary_head">System changelog, stats, update notifications</string>
    <string name="updatenotify_title">Update notifications</string>
    <string name="updatenotify_summary">Get push notifications of updates</string>
    <string name="ui_title">User interface</string>
    <string name="ui_summary">User interface settings &amp; tweaks</string>
    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
    <string name="tablet_tweaks_title_head">Tablet tweaks</string>
    <string name="tablet_tweaks_summary_head">Settings most useful for tablet devices collected in one place. Also working for phones</string>
    <string name="tablet_tweaks_sb_bottom_title">Bottom status bar</string>
    <string name="tablet_tweaks_sb_bottom_summary">Show status bar on bottom. Useful for tablets which use soft-buttons for home, menu, etc on status bar</string>
    <string name="tablet_tweaks_status_bar_dead_zone_title">Dead zone</string>
    <string name="tablet_tweaks_status_bar_dead_zone_summary">Add a dead zone of half screen width to the middle of the status bar</string>
    <string name="tablet_tweaks_soft_buttons_left_title">Soft-buttons left</string>
    <string name="tablet_tweaks_soft_buttons_left_summary">Put soft-buttons on left side of status bar</string>
    <string name="tablet_tweaks_soft_button_list_title">Choose soft-buttons</string>
    <string name="tablet_tweaks_interface_head">Interface</string>
    <string name="tablet_tweaks_disable_lockscreen_title">Disable lockscreen</string>
    <string name="tablet_tweaks_disable_lockscreen_summary">When enabled, does not show the lockscreen or pattern screen. Neither on boot, nor when waking the device</string>
    <string name="tablet_tweaks_disable_fullscreen_title">Disable fullscreen</string>
    <string name="tablet_tweaks_disable_fullscreen_summary">Override the fullscreen request of applications. When enabled, status bar is always visible until hidden by button</string>
    <string name="tablet_tweaks_unhide_button_list_head">Unhide button</string>
    <string name="tablet_tweaks_unhide_button_list_title">Choose unhide button</string>
    <string name="tablet_tweaks_extend_pm_title">Extend power menu</string>
    <string name="tablet_tweaks_extend_pm_summary">Add home/back/menu actions to the power menu</string>
    <string name="tablet_tweaks_extend_pm_list_title">Choose power menu buttons</string>
    <string name="tablet_tweaks_reverse_volume_behavior_title">Volume behavior reverse</string>
    <string name="tablet_tweaks_reverse_volume_behavior_summary_off">Volume buttons behave normal. Press for volume change, long press for user action</string>
    <string name="tablet_tweaks_reverse_volume_behavior_summary_on">Volume buttons behave reversed. Press for user action, long press for volume change</string>
    <string name="tablet_tweaks_input_head">Remap volume keys</string>
    <string name="tablet_tweaks_long_volp_action_title">Long press volume up</string>
    <string name="tablet_tweaks_long_volp_action_summary">Assign home/back/menu/etc action to volume button up long press. Limited to screen on</string>
    <string name="tablet_tweaks_long_volm_action_title">Long press volume down</string>
    <string name="tablet_tweaks_vol_both_action_title">Both volume buttons</string>
    <string name="tablet_tweaks_vol_both_action_summary">Note: Some devices do a hard wired reset on both volume buttons+power pressed</string>
    <string name="tablet_tweaks_long_vol_both_action_title">Long press both volume buttons</string>
    <string name="tablet_tweaks_extend_pm_list_head">Power menu buttons</string>
    <string name="tablet_tweaks_soft_buttons_list_head">Soft-buttons</string>
    <string name="tablet_soft_buttons_home_title">Home</string>
    <string name="tablet_soft_buttons_menu_title">Menu</string>
    <string name="tablet_soft_buttons_back_title">Back</string>
    <string name="tablet_soft_buttons_search_title">Search</string>
    <string name="tablet_soft_buttons_quick_na_title">Quick notifications</string>
    <string name="rotation_category_title">Accelerometer rotation</string>
    <string name="pref_rotation_0_title">0 degrees</string>
    <string name="pref_rotation_90_title">90 degrees</string>
    <string name="pref_rotation_180_title">180 degrees</string>
    <string name="pref_rotation_270_title">270 degrees</string>
    <string name="ui_status_bar_title">Status bar tweaks</string>
    <string name="ui_status_bar_am_pm_title">AM/PM style</string>
    <string name="ui_status_bar_am_pm_summary">Display style of AM/PM next to clock</string>
    <string name="ui_status_bar_clock_title">Show clock</string>
    <string name="ui_status_bar_clock_summary">Status bar clock will be hidden, if disabled</string>
    <string name="ui_status_bar_cm_battery_title">Battery percentage</string>
    <string name="ui_status_bar_cm_battery_summary">Show battery percentage plus mini battery icon. Disable if themes make this look broken</string>
    <string name="ui_status_bar_compact_carrier_title">Compact carrier label</string>
    <string name="ui_status_bar_compact_carrier_summary">Use alternate notification dropdown layout with mini carrier label</string>
    <string name="ui_status_bar_toggle_brightness">Status bar brightness control</string>
    <string name="ui_status_bar_toggle_brightness_summary">Allows adjusting of brightness by sliding across statusbar</string>
    <string name="ui_status_bar_toggle_info">Automatic brightness is enabled</string>
    <string name="ui_status_bar_cm_signal_text_title">Alternate Signal Display</string>
    <string name="ui_status_bar_cm_signal_text_summary">Show dBm value instead of signal bars</string>
    <string name="trackball_title">LED notifications</string>
    <string name="trackball_summary">Control trackball/LED notification colors and pulse</string>
    <string name="ui_webview_title">WebView</string>
    <string name="pref_pinch_reflow_title">Reflow after pinch in</string>
    <string name="pref_pinch_reflow_summary">Reflow webview content immediately after pinch to zoom in</string>
    <string name="ui_overscroll_title">Overscrolling</string>
    <string name="pref_overscroll_title">Overscroll effect</string>
    <string name="pref_overscroll_summary">Choose how scrollable objects look when they overshoot</string>
    <string name="pref_overscroll_weight_title">Overscrolling weight</string>
    <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
    <string name="ui_lockscreen_title">Screen lock settings</string>
    <string name="pref_lockscreen_delay_title">Delay</string>
    <string name="pref_lockscreen_timeout_lock_delay">Screen timeout delay</string>
    <string name="pref_lockscreen_screenoff_lock_delay">Screen turned off delay</string>
    <string name="pref_lockscreen_timeout_lock_delay_summary">How long to delay before enabling screen lock when screen times out</string>
    <string name="pref_lockscreen_screenoff_lock_delay_summary">How long to delay before enabling screen lock when screen is turned off</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel</string>
    <string name="trackball_notifications_title">LED notification colors</string>
    <string name="dialog_color_trackball">Choose a color</string>
    <string name="dialog_blink_trackball">Choose a blink rate</string>
    <string name="color_trackball_flash_title">Flash color</string>
    <string name="color_trackball_flash_summary">Color to flash</string>
    <string name="color_trackball_custom_title">Custom color</string>
    <string name="color_trackball_custom_summary">Custom color to flash</string>
    <string name="color_trackball_blink_title">Blink rate</string>
    <string name="color_trackball_blink_summary">Blink rate</string>
    <string name="color_trackball_test_title">Flash test</string>
    <string name="color_trackball_test_summary">Test the flash</string>
    <string name="dialog_clear_flash">Clear Flash</string>
    <string name="trackball_advanced_title">Advanced</string>
    <string name="pref_trackball_screen_title">Always pulse</string>
    <string name="pref_trackball_screen_summary">LED will pulse while screen is on</string>
    <string name="pref_trackball_blend_title">Blend notifications</string>
    <string name="pref_trackball_blend_summary">Blend notification colors. Overrides succession</string>
    <string name="pref_trackball_sucess_title">Succession</string>
    <string name="pref_trackball_sucess_summary">Pulse notifications in succession</string>
    <string name="pref_trackball_random_title">Random colors</string>
    <string name="pref_trackball_random_summary">Pulses the LED in random colors for all notifications</string>
    <string name="pref_trackball_order_title">Pulse in order</string>
    <string name="pref_trackball_order_summary">Pulses the LED color in order</string>
    <string name="pref_jit_mode_title">Use JIT</string>
    <string name="pref_jit_mode_summary">Use the Dalvik just-in-time compiler (requires reboot)</string>
    <string name="pref_heapsize_title">VM heap size</string>
    <string name="pref_heapsize_summary">Maximum amount of memory per VM heap (requires reboot)</string>
    <string name="pref_move_all_apps_title">Allow application moving</string>
    <string name="pref_move_all_apps_summary">Allow moving of any application to external storage</string>
    <string name="general_title">General</string>
    <string name="title_phone_goggles">Phone Goggles</string>
    <string name="summary_phone_goggles">Filter outgoing communications</string>
    <string name="cpu_title">CPU settings</string>
    <string name="cpu_summary">Governor and clock settings</string>
</resources>