<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">

        <PreferenceScreen android:key="cpu_settings" android:title="@string/cpu_title" android:summary="@string/cpu_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.cmparts"
                android:targetClass="com.cyanogenmod.cmparts.activities.CPUActivity" />
        </PreferenceScreen>

        <CheckBoxPreference android:key="pref_jit_mode"
            android:title="@string/pref_jit_mode_title" android:summary="@string/pref_jit_mode_summary" />

        <ListPreference android:key="pref_heapsize"
            android:dialogTitle="@string/pref_heapsize_title"
            android:title="@string/pref_heapsize_title" android:summary="@string/pref_heapsize_summary"
            android:entries="@array/entries_heapsize"
            android:entryValues="@array/entries_heapsize" />

    </PreferenceCategory>

</PreferenceScreen>
