<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">

        <CheckBoxPreference android:key="pref_move_all_apps"
            android:title="@string/pref_move_all_apps_title"
            android:summary="@string/pref_move_all_apps_summary" />

        <Preference
            android:key="phone_goggles_settings"
            android:title="@string/title_phone_goggles"
            android:summary="@string/summary_phone_goggles">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.cyanogenmod.cmparts"
                    android:targetClass="com.cyanogenmod.cmparts.activities.PhoneGogglesActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
